@@ -31,14 +31,28 @@ import net.sourceforge.jsxe.jsXe;
 import net.sourceforge.jsxe.ActionSet;
 import net.sourceforge.jsxe.ActionManager;
 import net.sourceforge.jsxe.gui.Messages;
+import net.sourceforge.jsxe.gui.GrabKeyDialog;
 import net.sourceforge.jsxe.util.MiscUtilities;
+import net.sourceforge.jsxe.util.Log;
+//}}}
+
+//{{{ AWT classes
+import java.awt.BorderLayout;
+import java.awt.Dimension;
 //}}}
 
 //{{{ Swing classes
+import javax.swing.Box;
+import javax.swing.JLabel;
+import javax.swing.JComboBox;
+import javax.swing.JTable;
+import javax.swing.JScrollPane;
 import javax.swing.table.*;
 //}}}
 
 //{{{ Java classses
+import java.util.Comparator;
+import java.util.Iterator;
 import java.util.Vector;
 //}}}
 
@@ -67,6 +81,27 @@ public class ShortcutsOptionPane extends AbstractOptionPane {
     
     //{{{ _init()
     protected void _init() {
+        setLayout(new BorderLayout(12,12));
+        
+        initModels();
+        
+        JComboBox setsBox = new JComboBox(ActionManager.getActionSets().toArray());
+        Box north = Box.createHorizontalBox();
+        north.add(new JLabel(Messages.getMessage("Shortcuts.Options.Select.Label")));
+        north.add(Box.createHorizontalStrut(6));
+        north.add(setsBox);
+        
+        JTable keyTable = new JTable(m_currentModel);
+        keyTable.getTableHeader().setReorderingAllowed(false);
+       // keyTable.getTableHeader().addMouseListener(new HeaderMouseHandler());
+       // keyTable.addMouseListener(new TableMouseHandler());
+        Dimension d = keyTable.getPreferredSize();
+        d.height = Math.min(d.height,200);
+        JScrollPane scroller = new JScrollPane(keyTable);
+        scroller.setPreferredSize(d);
+        
+        add(BorderLayout.NORTH,north);
+        add(BorderLayout.CENTER,scroller);
         
     }//}}}
     
@@ -82,25 +117,47 @@ public class ShortcutsOptionPane extends AbstractOptionPane {
     
     //{{{ Private Members
     
+    private ActionSetTableModel m_currentModel;
+    private Vector m_models;
+    
     //{{{ ActionSetTableModel class
     private class ActionSetTableModel extends AbstractTableModel {
         
         //{{{ ActionSetTableModel constructor
         public ActionSetTableModel(ActionSet set) {
-            //TODO: need to use key bindings from the GrabKeyDialog
             String[] names = set.getActionNames();
             m_set = new Vector(names.length);
             
             for (int i = 0; i < names.length; i++) {
                 String label = ActionManager.getLocalizedAction(names[i]).getLabel();
-                m_set.add(label);
+                if (label == null) {
+                    Log.log(Log.WARNING, this, names[i]+" has a null label");
+                } else {
+                    String binding = jsXe.getProperty(names[i]+".shortcut");
+                    m_set.add(new GrabKeyDialog.KeyBinding(names[i], label, binding));
+                }
             }
-            MiscUtilities.quicksort(m_set, new MiscUtilities.StringCompare());
+            MiscUtilities.quicksort(m_set, new KeyCompare());
+            
+            m_name = set.getLabel();
         }//}}}
         
         //{{{ getColumnCount()
         public int getColumnCount() {
             return 2;
+        }//}}}
+        
+        //{{{ getColumnName()
+        
+        public String getColumnName(int columnIndex) {
+            switch (columnIndex) {
+                case(0):
+                    return Messages.getMessage("Shortcuts.Options.Command");
+                case(1):
+                    return Messages.getMessage("Shortcuts.Options.Shortcut");
+                default:
+                    return null;
+            }
         }//}}}
         
         //{{{ getRowCount()
@@ -110,13 +167,70 @@ public class ShortcutsOptionPane extends AbstractOptionPane {
         
         //{{{ getValueAt()
         public Object getValueAt(int row, int column) {
-            return null;
+            switch (column) {
+                case (0):
+                    return ((GrabKeyDialog.KeyBinding)m_set.get(row)).label;
+                case (1):
+                    return ((GrabKeyDialog.KeyBinding)m_set.get(row)).shortcut;
+                default:
+                    return null;
+            }
+        }//}}}
+        
+        //{{{ setValueAt()
+        
+        public void setValueAt(Object value, int row, int col) {
+            if (col == 0)
+                return;
+
+            ((GrabKeyDialog.KeyBinding)m_set.get(row)).shortcut = (String)value;
+
+            // redraw the whole table because a second shortcut
+            // might have changed, too
+            fireTableDataChanged();
+        }//}}}
+        
+        //{{{ toString()
+        
+        public String toString() {
+            // needed for sorting of the models in initModels()
+            return m_name;
         }//}}}
         
         //{{{ Private members
+        
+        //{{{ KeyCompare class
+        
+        private class KeyCompare implements Comparator {
+            
+            public int compare(Object obj1, Object obj2) {
+                String label1 = ((GrabKeyDialog.KeyBinding)obj1).label;
+                String label2 = ((GrabKeyDialog.KeyBinding)obj2).label;
+                return MiscUtilities.compareStrings(label1,label2,true);
+            }
+            
+        }//}}}
+        
         private Vector m_set;
+        private String m_name;
         //}}}
         
+    }//}}}
+    
+    //{{{ initModels()
+    
+    private void initModels() {
+        m_models = new Vector();
+        Iterator itr = ActionManager.getActionSets().iterator();
+        while(itr.hasNext()) {
+            ActionSet actionSet = (ActionSet)itr.next();
+            if (actionSet.getActionCount() != 0) {
+                String modelLabel = actionSet.getLabel();
+                m_models.addElement(new ActionSetTableModel(actionSet));
+            }
+        }
+        MiscUtilities.quicksort(m_models,new MiscUtilities.StringICaseCompare());
+        m_currentModel = (ActionSetTableModel)m_models.elementAt(0);
     }//}}}
     
     //}}}
